# CovertEDA

./: .coverteda_ai  .gitignore  .gitmodules  CLAUDE.md  Containerfile  README.md  coverteda_implementation_guide.md  coverteda_v3.html  fpgaforge_v2 (1).html  index.html  package-lock.json  package.json  tailwind.config.js  test_all_examples.ps1  test_examples.bat  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  utilization_report.json
src-tauri/capabilities/: default.json
src-tauri/examples/radiant-counter/: .coverteda
src-tauri/icons/: icon.icns
src-tauri/src/: bitstream_security.rs  cocotb.rs  commands.rs  config.rs  eco_editor.rs  files.rs  git.rs  hdl_encrypt.rs  lib.rs  main.rs  makefile.rs  programmer.rs  project.rs  reveal.rs  run_manager.rs  sei_editor.rs  sim_generator.rs  sim_wizard.rs  source_templates.rs  ssh.rs  strategy.rs  types.rs
src-tauri/src/backend/: ace.rs  diamond.rs  libero.rs  mod.rs  oss.rs  quartus.rs  radiant.rs  vivado.rs
src-tauri/src/parser/: backannotation.rs  constraints.rs  mod.rs  pad.rs  par.rs  power.rs  qsf.rs  synthesis.rs  timing.rs  utilization.rs
src-tauri/src/process/: mod.rs
src-tauri/tests/fixtures/ace/: timing.rpt  utilization.rpt
src-tauri/tests/fixtures/diamond/: timing.twr  utilization.mrp
src-tauri/tests/fixtures/libero/: drc.rpt  power.rpt  timing.rpt  utilization.rpt
src-tauri/tests/fixtures/oss/: report.json
src-tauri/tests/fixtures/quartus/: timing.sta.rpt  utilization.fit.rpt
src-tauri/tests/fixtures/radiant/: par.rpt  pinout.pad  timing.twr  utilization.mrp
(+161 files in other folders)
