[package]
name = "coverteda"
version = "0.2.1"
description = "Unified FPGA Development Frontend"
authors = ["Travis Covert"]
edition = "2021"

[lib]
name = "coverteda_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "process", "fs", "io-util", "time"] }
regex = "1"
git2 = "0.19"
notify = "7"
walkdir = "2"
dirs = "5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
which = "7"
libc = "0.2"
glob = "0.3"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
